fix(movie): wrapping genres if many

--- a/public/styles.809583.css
+++ b/public/styles.809583.css
@@ -713,6 +713,10 @@ video {
   flex-direction: column;
 }
 
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
 .items-end {
   align-items: flex-end;
 }
